--- a/.gitignore
+++ b/.gitignore
@@ -23,9 +23,14 @@ dist-ssr
 *.sln
 *.sw?
 
+!/var/cache
+/var/cache/*
+
 ###> symfony/webpack-encore-bundle ###
 /node_modules/
 /public/build/
 npm-debug.log
 yarn-error.log
+/var/
+/vendor/
 ###< symfony/webpack-encore-bundle ###
