--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@symfony/webpack-encore": "^5.1.0",
     "axios": "^1.9.0",
     "core-js": "^3.41.0",
+    "pinia": "^3.0.2",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1"
   },
